# autoimprove

./: .gitignore  README.md  architecture.md  autoimprove-plan.md  autoimprove.sh  config.yaml  eval_anchors.yaml  program.md  pyproject.toml
.beads/: dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
beads/: README.md  phase1-beads.md  phase2a-beads.md  phase2b-beads.md  phase3-beads.md  phase4-beads.md  phase5-beads.md
profiles/: code.md  document.md  workflow.md
src/: __init__.py  agent_bridge.py  backlog.py  cli.py  config.py  git_ops.py  multi_orchestrator.py  orchestrator.py  policy.py  preflight.py  project_memory.py  repo_index.py  run_context.py  types.py
src/agents/: __init__.py  analyst.py  base.py  coder.py  indexer.py  modifier.py  reviewer.py
src/eval/: __init__.py  baseline.py  criteria.py  engine.py  eval_anchors.py  llm_judge.py  search_memory.py
src/plugins/: __init__.py  agent_plugin.py  base.py  code_plugin.py  document_plugin.py  registry.py  workflow_plugin.py
src/reporting/: __init__.py  experiment_log.py  summary.py  terminal.py
tests/e2e/: mock_agent.py  test_full_run.py
tests/e2e/sample_project/: main.py  pyproject.toml  test_main.py  utils.py
