[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoimprove"
version = "0.1.0"
description = "Autonomous iterative improvement for code, workflows, and documents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
docs = [
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
]

[project.scripts]
autoimprove = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
